# dstc-cpp

./: .gitignore  CMakeLists.txt  README.md  dstc.hpp  dstccallback.cpp  dstccallback.hpp  dstceventloop.cpp  dstceventloop.hpp  gen_callbackfunction_execute.py  gen_getargtypefunctions.py  print_name_and_age_client.cpp  run_tests_separate_processes.py
test/: array_of_struct_server.c  array_type_many_args_server.c  array_type_one_arg_server.c  basic_type_many_args_server.c  basic_type_one_arg_server.c  callback_server.c  client_tests.cpp  dynamic_type_server.c  main.cpp  mixed_types_server.c  multiple_dynamic_type_server.c  multiple_struct_type_server.c  print_name_and_age_server.c  struct_type_server.c  teststructs.h
